feat: Add Savings Goals and Subscriptions components with respective templates and styles
feat: Implement Onboarding components including Intro Slides and Splash Screen

feat: Create Profile components for Premium Upsell and Security Vault

feat: Develop Settings and User Profile components with navigation

feat: Introduce Ticket Scanner component for scanning tickets

feat: Add Sentinel components for Validation History and Request

feat: Implement Auth Guard for route protection and Auth Service for user authentication

feat: Create shared Header component for consistent navigation

--- a/Spenta/src/app/components/profile/user-profile/user-profile.component.html
+++ b/Spenta/src/app/components/profile/user-profile/user-profile.component.html
@@ -4,7 +4,7 @@
     <h2>Jose Julian Hernandez Hernandez</h2>
     <p>julian.hdz&#64;email.com</p>
   </div>
-  
+
   <div class="menu-options">
     <a routerLink="/app/settings" class="menu-item card">
       <i class="bi bi-gear-fill"></i>
@@ -21,10 +21,11 @@
       <span>Spenta Premium</span>
       <i class="bi bi-chevron-right"></i>
     </a>
-     <a class="menu-item card">
+    <button (click)="logout()" class="menu-item card">
       <i class="bi bi-box-arrow-right"></i>
       <span>Cerrar Sesión</span>
       <i class="bi bi-chevron-right"></i>
-    </a>
+    </button>
+
   </div>
 </div>
