--- a/Spenta/src/app/layouts/main-layout/main-layout.component.html
+++ b/Spenta/src/app/layouts/main-layout/main-layout.component.html
@@ -1,9 +1,10 @@
-<main class="main-content">
-  <router-outlet></router-outlet>
-</main>
-
-<button class="fab" (click)="openTicketScanner()">
-  <i class="bi bi-upc-scan"></i>
-</button>
-
-<app-tab-bar></app-tab-bar>
+<app-sidebar></app-sidebar>
+<div class="main-wrapper">
+  <main class="main-content">
+    <router-outlet></router-outlet>
+  </main>
+  <button class="fab" (click)="openTicketScanner()">
+    <i class="bi bi-upc-scan"></i>
+  </button>
+  <app-tab-bar></app-tab-bar>
+</div>
