--- a/Spenta/src/app/layouts/main-layout/main-layout.component.scss
+++ b/Spenta/src/app/layouts/main-layout/main-layout.component.scss
@@ -1,15 +1,34 @@
 :host {
-  display: block;
+  display: flex;
+  height: 100vh;
+  background-color: var(--c-bg-body);
+}
+
+app-sidebar {
+  display: none;
+}
+
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   position: relative;
-  min-height: 100vh;
+  min-width: 0;
 }
 
 .main-content {
-  padding-bottom: 80px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  min-height: 0;
+}
+
+app-tab-bar {
+  flex-shrink: 0;
 }
 
 .fab {
-  position: fixed;
+  position: absolute;
   bottom: 85px;
   right: 20px;
   width: 60px;
@@ -26,3 +45,17 @@
   cursor: pointer;
   z-index: 1000;
 }
+
+@media (min-width: 768px) {
+  app-sidebar {
+    display: block;
+    flex-shrink: 0;
+    width: 260px;
+    border-right: 1px solid var(--c-border-primary);
+  }
+
+  app-tab-bar, .fab {
+    display: none;
+  }
+}
+
